variables.Variables.scala.error
Erreur de compilation :
Variables:4: error: not found: value ramasseBiscuit
ramasseBiscuit()
^