variables.Variables.scala.code
var nbPas : Int = 0
var dejaFait : Int = 0
while (!estSurBiscuit()) {avance();nbPas=nbPas+1}
ramasseBiscuit()
while(dejaFait != nbPas) {recule();dejaFait=dejaFait+1}